kubernetes/apps/adguard/adguard-b-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-b
  namespace: apps
  labels:
    app.kubernetes.io/name: adguard
    app.kubernetes.io/instance: adguard-b
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: adguard
    app.kubernetes.io/instance: adguard-b
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-b-dns
  namespace: apps
  labels:
    app.kubernetes.io/name: adguard
    app.kubernetes.io/instance: adguard-b
  annotations:
    metallb.io/loadBalancerIPs: 10.0.10.202
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: adguard
    app.kubernetes.io/instance: adguard-b
  ports:
    - name: dns-tcp
      port: 53
      targetPort: dns-tcp
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: dns-udp
      protocol: UDP
