kubernetes/apps/adguard/adguardhome-sync.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguardhome-sync
  namespace: apps
  labels:
    app.kubernetes.io/name: adguardhome-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: adguardhome-sync
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: adguardhome-sync
    spec:
      enableServiceLinks: false
      containers:
        - name: sync
          image: ghcr.io/bakito/adguardhome-sync:v0.7.1
          imagePullPolicy: IfNotPresent
          args:
            - run
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 60
            periodSeconds: 60
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: adguardhome-sync
  namespace: apps
  labels:
    app.kubernetes.io/name: adguardhome-sync
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: adguardhome-sync
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
